# bb-remote-execution-py

./: .gitlab-ci.yml  .mypy.ini  LICENSE.txt  README.md  example_macos_config.yaml  example_win_config.yaml  pyproject.toml  worker.py
google/api/: auth_pb2.pyi  backend_pb2.py  backend_pb2.pyi  client_pb2.py  config_change_pb2.pyi  consumer_pb2.pyi  context_pb2.pyi  control_pb2.py  control_pb2.pyi  distribution_pb2.pyi  documentation_pb2.pyi  endpoint_pb2.pyi  error_reason_pb2.py  label_pb2.py  label_pb2.pyi  metric_pb2.pyi  monitored_resource_pb2.py  monitored_resource_pb2.pyi  monitoring_pb2.pyi  resource_pb2.py  service_pb2.pyi
google/bytestream/: bytestream_pb2.py  bytestream_pb2.pyi  bytestream_pb2_grpc.py
google/longrunning/: operations_pb2.py
google/rpc/: code_pb2.pyi  status_pb2.pyi
remoteworker/: remoteworker_pb2.pyi  remoteworker_pb2_grpc.py
src/bbworker/: __main__.py  cacheinfo.py  cas.py  config.py  directorybuilder.py  filesystem.py  lock.py  main.py  metrics.py  runner.py  thread.py  util.py
src/google/api/: billing_pb2.pyi  endpoint_pb2.py  error_reason_pb2.pyi  log_pb2.pyi  logging_pb2.pyi  metric_pb2.py  (+4 more)
src/remoteworker/: remoteworker_pb2.py
tests/: conftest.py  test_cas.py  test_config.py  test_directorybuilder.py  test_filesystem.py  test_lock.py  test_runner.py  test_state.py  test_util.py
winservice/: build.bat  install.py  upload.py  winservice.py
winservice/pyinstaller_hooks/: hook-google.api.py
worker/: __main__.py  cacheinfo.py  cas.py  directorybuilder.py  filesystem.py  lock.py  runner.py  state.py  thread.py  util.py
(+3 files in other folders)
