[project]
name = "bbworker"
version = "0.0.1"
dependencies = [
  'grpcio>=1.50.0,<2.0.0',
  'protobuf>=4.21.9,<5.0.0',
  'pyyaml>=6.0,<7.0',
  'pydantic>=1.10.2,<2.0.0',
]

[project.optional-dependencies]
test = [
  'pytest>=7.2.0,<8.0.0',
  'mypy==0.991',
]
dev = [
  'pyright==1.1.282,<2.0.0',
  'flake8>=6.0.0,<7.0.0',
  'black>=22.10.0,<23.0.0',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79
target-version = ['py310']
